# virality-chat-poc

./: .gitignore  CHANGELOG.md  CHECKLIST.md  GETTING_STARTED.md  NEXT_STEPS.md  README.md  env.template  pyproject.toml  requirements-minimal.txt  requirements.txt  test_comprehensive_features.py
config/: evaluation_config.py  settings.py
docs/: CHECKLIST.md  NEXT_STEPS.md  POC_QUICK_START.md  README.md  accounts_strategy.md  api_endpoints_guide.md  api_production_ready_summary.md  apify_scraping_documentation.md  broader-context.md  cleanup_analysis.md  ddd_approach.md  development_guide.md  feature_aggregation_guide.md  gemini_analysis.md  gemini_cost_analysis.md  getting_started.md  migration_summary.md  phase_analysis_detailed.md  pipeline.md  poc_development_plan.md  prd.md  project_structure.md  quick_start.md  research_synthesis.md  setup_guide.md  structure_comparison.md
evaluators/: __init__.py  base.py  requirements.txt
notebooks/: 03_evaluation_framework_demo.ipynb
scripts/: README.md  aggregate_features.py  analyze_dataset.py  analyze_existing_data.py  analyze_poc_data.py  apify_cache_manager.py  balance_dataset.py  check_poc_data.py  clean_dataset.py  ddd_deploy.py  debug_feature_extraction.py  deploy_railway.py  run_evaluation.py  run_pipeline.py  run_scraping.py  scraper.js  scraper_demo.py  setup_project.py  test_api_fixed.py  test_batch_system.py  test_feature_extraction_direct.py  test_gemini.py  test_model_correctness.py  test_model_diagnostics.py  test_model_final.py  test_new_features.py  test_pipeline_minimal.py  test_pipeline_with_aggregation.py  test_poc_pipeline.py  test_real_pipeline.py  test_real_tiktok_scraper.py  test_scraping.py  test_simulation_endpoint.py  test_tiktok_url_analysis.py  test_video_scraping.py  train_xgboost_model.py  validate_setup.py
src/: __init__.py  run_feature_extraction.py
streamlit_app/: app.py
(+135 files in other folders)
