[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virality-chat-poc"
version = "0.1.0"
description = "TikTok video virality analysis using Gemini"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "apify-client>=1.0.0",
    "google-generativeai>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aiohttp>=3.8.0",
]
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
